[gd_scene load_steps=9 format=2]

[ext_resource path="res://Canvas.gd" type="Script" id=1]
[ext_resource path="res://darker.tres" type="Texture" id=2]
[ext_resource path="res://FPSLabel.gd" type="Script" id=3]
[ext_resource path="res://roboti_font.tres" type="DynamicFontData" id=4]
[ext_resource path="res://GateExample.tscn" type="PackedScene" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.223529, 0.223529, 0.223529, 1, 0.223529, 0.223529, 0.223529, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.013, 300 )
scale = Vector2( 0.500012, 599.984 )
texture = SubResource( 2 )
script = ExtResource( 1 )

[node name="BottomBar" type="Sprite" parent="Sprite"]
position = Vector2( 0, 0.456726 )
scale = Vector2( 128, 0.087 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = -4.48999
margin_top = 2.2449
margin_right = 1019.51
margin_bottom = 602.245
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddOr" type="Button" parent="Control"]
margin_left = 7.0
margin_top = 556.0
margin_right = 44.0
margin_bottom = 593.0
grow_horizontal = 0
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddAnd" type="Button" parent="Control"]
margin_left = 49.7194
margin_top = 556.0
margin_right = 86.7194
margin_bottom = 593.0
grow_horizontal = 0
text = "&"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GateExample" parent="Control" instance=ExtResource( 5 )]

[node name="Label" type="Label" parent="Control"]
anchor_right = 0.016
margin_left = 11.3459
margin_top = 3.29189
margin_right = 145.346
margin_bottom = 50.2919
custom_fonts/font = SubResource( 3 )
text = "60 FPS"
script = ExtResource( 3 )

[connection signal="pressed" from="Control/AddOr" to="Sprite" method="_on_AddOr_pressed"]
[connection signal="pressed" from="Control/AddOr" to="Sprite" method="_on_Add_Pressed" binds= [ "OR", 1 ]]
[connection signal="pressed" from="Control/AddAnd" to="Sprite" method="_on_AddAnd_pressed"]
